--- a/posts/2019-05-20.md
+++ b/posts/2019-05-20.md
@@ -13,13 +13,15 @@ Let's take the example of single-source shortest paths: we have as input a direc
 
 For example, here is a picture of a directed graph with some edge weights on it:
 
-**PICTURE**
+![A directed graph](https://github.com/frankmcsherry/blog/blob/master/assets/ssswp/graph.png)
 
 Let's talk through how we might compute the shortest paths from a supplied single source.
 
-There is a classic algorithm that starts from the source node, at distance zero, and then repeatedly improves the set of shortest distances by considering single steps along edges. Once we reach a point where no further improvements can be made, we have reached the correct answer!
+There is a classic algorithm that starts from the source node, A, at distance zero, and then repeatedly improves the set of shortest distances by considering single steps along edges. Once we reach a point where no further improvements can be made, we have reached the correct answer!
 
-We can write this as a differential dataflow computation, following the algorithmic sketch up above, and using differential dataflow's `iterate` method. In particular, we will iteratively set a collection `dists` to the result of joining `dists` with `edges`, adding whatever weight is on the edge, merging in initial distances, and retaining the minimum distance for each node.
+In the picture above we would start with node A at distance zero. Then we expand out to nodes B and C, with distances 7 and 2 respectively. In the next round we expand to node D at distance 3 and we improve the distance to B (to from 7 to 6). In each round we either reach a new node or improve the distance to an existing node, until we eventually converge.
+
+We can write this algorithm as a differential dataflow computation, with differential dataflow's `iterate` method. In particular, we will iteratively set a collection `dists` to the result of joining `dists` with `edges`, adding whatever weight is on the edge, merging in initial distances, and retaining only the minimum distance for each node.
 
 It looks like this:
 
@@ -55,11 +57,11 @@ where G::Timestamp: Lattice+Ord {
 }
 ```
 
-That might be a bit of an eyeful to look at all at once, so take your time. We will return to parts of it as we go along.
+That might be a bit of an eyeful to look at all at once, so take your time. We will return to parts of it as we go along. The most exciting part are the four lines at the end, where we describe the rule for updating `dists`.
 
 Let's see how a computation like this runs!
 
-We are going to go pretty simple in this post: we'll use random graphs on specified numbers of nodes and edges, and with edge weights drawn uniformly between specified minimum and maximum values. Our computation will first load up and run `sssp` on the input graph, and then perform a sequence of 1,000 random updates to the graph; we are interested in the times neede to perform both of these.
+We are going to go pretty simple in this post: we'll use random graphs on specified numbers of nodes and edges, and with edge weights drawn uniformly between specified minimum and maximum values. Our computation will first load up and run `sssp` on the input graph, and then perform a sequence of 1,000 random updates to the graph (each an edge addition and deletion); we are interested in the times neede to perform both of these.
 
 For example, let's take the easiest case of unit weights, which corresponds to the popular "breadth first search" problem:
 
@@ -67,7 +69,7 @@ For example, let's take the easiest case of unit weights, which corresponds to t
 |----:|----:|------:|------:|------:|-----:|
 |1M   |  10M|      1|      1|  7.35s| 7.61s|
 
-Nice! Maybe... Who even knows these days. Seven seconds might be a lot of time, but we can do a sequence of 1,000 updates in under 300 milliseconds, meaning each takes under a millisecond itself. That is great!
+Nice! Maybe... Who even knows these days. Seven seconds might be a lot of time, but we can do a sequence of 1,000 updates in under 300 milliseconds, meaning each takes under a millisecond itself. That is great! Maybe!
 
 Now, we are here because there is something interesting that is going to happen. Let's see what happens as we vary .. the maximum weight setting. How suspicious...
 
@@ -88,34 +90,44 @@ Things for sure got worse. Let's crank things up even further, by orders of magn
 |1M   |  10M|      1|    100| 82.21s| 87.58s|
 |1M   |  10M|      1|   1000|100.75s|106.96s|
 
-Our initial running time has increased by 13x, and the incremental update times have increased 20x from 300ms to 6 seconds.
+Our initial running time has increased by 13x, and the incremental update times have increased 20x from 300ms to six seconds (for 1,000 updates; still not tragic).
 
 Something has gone horribly wrong with SSSP as the variation in weights increases.
 
-To help with our performance debugging, and because I know where this is going, let's do the same experiment where we add 1,000 to all weights. These weights have the same *absolute* range as the experiment above.
+To help with our performance debugging, and because I know where this is going, let's do the same experiment where we add 1,000 to all weights. These weights have the same *absolute* range as the experiment above, but the *relative* variation is much smaller.
 
 |nodes|edges|minimum|maximum|compute| update|
 |----:|----:|------:|------:|------:|------:|
-|1M   |  10M|   1000|   1000|  7.36s|  7.60s|
-|1M   |  10M|   1000|   1010|  9.90s| 10.20s|
-|1M   |  10M|   1000|   1100| 10.12s| 10.48s|
-|1M   |  10M|   1000|   2000| 12.95s| 13.36s|
+|1M   |  10M|   1001|   1001|  7.36s|  7.60s|
+|1M   |  10M|   1001|   1010|  9.90s| 10.20s|
+|1M   |  10M|   1001|   1100| 10.12s| 10.48s|
+|1M   |  10M|   1001|   2000| 12.95s| 13.36s|
 
-These are back to the pretty sweet numbers we saw up above. The first row is basically identical to the first row above (which makes sense: there is just one weight in each case). The other rows, with increasing ranges of weights, never really cause problems; they are at worst the times of the two weight case up above. It turns out there is a good reason for that.
+These measurements are now back to the pretty sweet numbers we saw up above. The first row is basically identical to the first row above (which makes sense: there is just one weight in both cases). The other rows, with increasing ranges of weights, never really cause problems; they are at worst the times of the two weight case up above. It turns out there is a good reason for that.
 
 ### Diagnosing the problem
 
 Let's look at our picture again, and trace through what happens as we perform multiple rounds of iterative updates to our distances.
 
-In the zeroth round we have only the root, at distance zero.
+![A directed graph](https://github.com/frankmcsherry/blog/blob/master/assets/ssswp/graph.png)
 
-In the first round, we step across each edge, and produce candidate distances for each of EXAMPLE
+Among other things,
 
-In the second round, we step across each edge again, and improve the distances to EXAMPLE.
+* In the zeroth round we have only the root, at distance zero.
 
-In the third round, we step across each edge again, and again improve the distances to EXAMPLE.
+* In the first round, we produce candidate distances for each of B and C.
 
-What you might notice here, or perhaps not because the example is somewhat small, is that we are happily investigating fairly large cost paths, and informing nodes downstream about their newly discovered distances, long before we have any reason to believe that these will be final distances.
+* In the second round, we both i. produce candidate distances for F, G, and H, and ii. improve the distance to B.
+
+* In the third round, we propose new and improved distances to F, G, and H.
+
+* In the fourth round, we again improve the distance to B.
+
+* In the fifth round, we again propose new and improved distances to F, G, and H.
+
+What you might notice here, or perhaps not because the example is somewhat small, is that we are happily investigating fairly large cost paths, the early paths through B, and informing nodes downstream about their newly discovered distances, long before we have any reason to believe that these will be final distances.
+
+The example is actually chosen so that the shortest distance from A to H is continually changing, from 13, to 12, to 11, and eventually to 9. It takes seven rounds to get there.
 
 Consider what will happen in a graph that has edges with weights either one or one thousand. Starting from our source, we should probably follow just weight one edges for quite a while, probably one thousand-ish steps. At that point, we can afford to follow one weight one thousand edge, and should then return to stepping along weight one edges again.
 
@@ -132,15 +144,14 @@ Crazy, right? Probably...
 ```rust
     dists.join(&edges)
          .map(|(k,l,(d,w))| (d,l+w))
-         .concat(&dists)
+         .concat(&nodes)
          // BEGIN NEW
          .inner
-         .map(|((d,w),mut t,r)| {
-            t.inner = ::std::cmp::max(t.inner, w as u64);
-            ((d,w),t,r)
-         })
-         // END NEW
+         .map_in_place(|((d,w),t,r)|
+            t.inner = std::cmp::max(t.inner, *w as u64)
+         )
          .as_collection()
+         // END NEW
          .reduce(|_, s, t| t.push((*s[0].0, 1)))
 ```
 
@@ -169,7 +180,7 @@ Eh. That was *almost* amazing. What new misery has befallen us?
 
 ### Waiting faster
 
-Perhaps you recall learning about Dijkstra's algorithm, a sweet single-source shortest path algorithm; it is a great example of when you would learn about a [priority queue](https://en.wikipedia.org/wiki/Priority_queue), a neat data structure that lets you quickly update and extract the minimal element from a set.
+Perhaps you recall learning about Dijkstra's algorithm, a sweet single-source shortest path algorithm; it is a great example of when you would learn about a [priority queue](https://en.wikipedia.org/wiki/Priority_queue), a neat data structure that lets you quickly update and extract the minimal element from a set. Dijkstra's algorithm uses a priority queue to manage the set of unvisited nodes at the least distance, and to process them in that order.
 
 We have desperate need of such a data structure here.
 
@@ -180,12 +191,11 @@ We can mitigate this somewhat with timely dataflow's `delay` operator, which wil
 ```rust
     dists.join(&edges)
          .map(|(k,l,(d,w))| (d,l+w))
-         .concat(&dists)
+         .concat(&nodes)
          .inner
-         .map(|((d,w),mut t,r)| {
-            t.inner = ::std::cmp::max(t.inner, w as u64);
-            ((d,w),t,r)
-         })
+         .map_in_place(|((d,w),t,r)|
+            t.inner = std::cmp::max(t.inner, *w as u64)
+         )
          // BEGIN NEW
          .delay(|(_,t,_),_| t.clone())
          // END NEW
@@ -204,19 +214,161 @@ The result is a touch slower on the single-weight case, but it starts to dramati
 
 This is now much less embarassing than it was before. It isn't wonderful yet (don't ask about the COST here), but it is a significant improvement over where we started.
 
-### Other examples
+### Single-source *widest* paths
 
-There is another example of programming with time that we've had for quite a while in differential dataflow: prioritized label propagation.
+Let's look at another example, similar to single-source shortest paths but with a twist.
 
-Label propagation is a way to determine the connected components of an undirected graph, in which each node announces a "label" (initially its own name) to all of its neighbors, and then updates its label to be the least value received from its neighbors. The process iterates until all labels are locked in, at which point each node holds the least label within its connected component.
+Imagine we are trying to drive a large truck through an old-timey European city, whose roads have non-uniform widths. In order to reach some address in the city, we will need to look for roads all of which are sufficiently wide to accommodate our truck. We'd like short paths, sure, but even more important is to find *wide* paths.
 
-Label propagation is a pretty bad algorithm. One of its particular defects is that it eagerly circulates large labels even though almost all of these labels are going to get clobbered by a smaller label.
+The single-source widest path problem looks for paths from a source node to all other nodes, with the largest *minimum* weight along the path. For each other node, the output of the computation tells us just how wide a truck we can drive to that destination.
 
-Why not start circulating small labels first, and move to large labels only later in the computation? The small labels will move around quickly, and the large labels will arrive only to be clobbered by the small label already held by the node bearing the large label's name.
+Algorithmically this is pretty similar to the shortest path problem, but with a few changes. For pedagogical reasons we are going to flip weights over, so that we track the largest value along the path, and for each node retaining the minimum value among all paths. Just think of the value as decribing the amount of dirt used in the surrounding walls, I guess.
 
-This results in a fairly significant speed-up, both for the initial computation of labels and for incremental updates to the set of labels (because with less work done, less needs to change).
+```rust
+    roots
+        .map(|x| (x, 0));
+        .iterate(|widths| {
 
-EVIDENCE
+            let edges = edges.enter(&inner.scope());
+            let nodes = nodes.enter(&inner.scope());
+
+            widths
+                .join(&edges)
+                .map(|(k,l,(d,w))| (d, std::cmp::max(l,w)))
+                .concat(&nodes)
+                .reduce(|_, s, t| t.push((*s[0].0, 1)))
+        })
+```
+
+With so many similarities, why are we looking at this problem? It turns out that SSWP has an interesting change from SSSP: whereas paths in SSSP naturally expire because they get longer with each hop, SSWP paths can go on for quite a while without reducing their value.
+
+Consider a random graph with edge widths one and two. With a large average degree we can probably reach most of the nodes in the graph along a path of width two, totally ignoring paths that cross an edge of width one. At the same time, the set of nodes that can be reached along a path of width one grows exponentially faster than the set of nodes that cane be reached along a path of width two.
+
+|nodes|edges|minimum|maximum|compute| update|
+|----:|----:|------:|------:|------:|------:|
+|1M   |  10M|      1|      1|  7.15s|  7.36s|
+|1M   |  10M|      1|      2| 12.96s| 13.41s|
+|1M   |  10M|      1|      3| 18.00s| 18.91s|
+|1M   |  10M|      1|      4| 21.57s| 22.58s|
+|1M   |  10M|      1|      5| 26.54s| 27.93s|
+|1M   |  10M|      1|     10| 38.52s| 40.22s|
+|1M   |  10M|      1|    100|100.42s|107.38s|
+|1M   |  10M|      1|   1000|161.51s|178.84s|
+
+This is a fair bit worse than SSSP (though not way out of line). Can we fix it the same way?
+
+We can't. At least, not really. The problem is that there isn't as much of a correspondence between rounds of iteration and "width" as there was for "distance". We might take several rounds of iteration with the same width, and just delaying a shorter width one or two iterations doesn't do what we want.
+
+What do we want? We want to punt each smaller width arbitrarily far into the future, so that we only process it once we've finished with all better widths. We can do this with fancy timely data lexicographic timestamp combinators or .. or we can just cheat a bit.
+
+The following fragment advances each update 1024 rounds into the future based on its width. This gives each distinct width 1024 rounds to get their shit together and see which nodes can be newly reached.
+
+```rust
+    inner
+        .join(&edges)
+        .map(|(k,l,(d,w))| (d, std::cmp::max(l,w)))
+        .concat(&nodes)
+        // BEGIN NEW
+        .inner
+        .map_in_place(|((d,w),mut t,r)|
+           t.inner = ::std::cmp::max(t.inner, 1024 * *w as u64);
+        )
+        .delay(|(_,t,_),_| t.clone())
+        .as_collection()
+        // END NEW
+        .reduce(|_, s, t| t.push((*s[0].0, 1)))
+```
+
+As before, if we don't have the `delay` in there things look great until we get to larger weights, at which point things go *even more wrong*. Like, 350 seconds wrong (but then only 2 seconds to incrementally update)!
+
+<!--
+|nodes|edges|minimum|maximum|compute| update|
+|----:|----:|------:|------:|------:|------:|
+|1M   |  10M|      1|      1|  7.23s|  7.46s|
+|1M   |  10M|      1|      2|  8.69s|  8.96s|
+|1M   |  10M|      1|      3|  9.91s| 10.29s|
+|1M   |  10M|      1|      4| 10.99s| 11.38s|
+|1M   |  10M|      1|      5| 12.87s| 13.29s|
+|1M   |  10M|      1|     10| 17.18s| 17.81s|
+|1M   |  10M|      1|    100| 64.00s| 65.25s|
+|1M   |  10M|      1|   1000|354.77s|356.87s|
+ -->
+
+Instead, with `delay` in place the numbers look like
+
+|nodes|edges|minimum|maximum|compute| update|
+|----:|----:|------:|------:|------:|------:|
+|1M   |  10M|      1|      1|  8.00s|  8.23s|
+|1M   |  10M|      1|      2|  9.32s|  9.59s|
+|1M   |  10M|      1|      3| 10.24s| 10.62s|
+|1M   |  10M|      1|      4| 10.96s| 11.35s|
+|1M   |  10M|      1|      5| 12.10s| 12.55s|
+|1M   |  10M|      1|     10| 14.74s| 15.38s|
+|1M   |  10M|      1|    100| 26.93s| 28.25s|
+|1M   |  10M|      1|   1000| 39.41s| 41.99s|
+
+### Pareto surfaces
+
+Let's get a bit more exotic, shall we?
+
+We've done shortest paths, and we've done widest paths. Most likely there is a trade-off between the shortness of a path and its width. A path might be short but narrow, like squeezing between some buildings. Another path might be longer but wider, and more appropriate for our sweet truck. Possibly, we should be computing a spectrum of paths, so that the user can determine for themselves which is best.
+
+In our example, paths have a length and a width, and one path is clearly better than another if it has shorter values for each (recall: we are doing the short-width is best interpretation). But we could have two paths for which neither is better than the other. Or more generally, a set of paths no one of which is better than another. What to do in this case?
+
+We can tweak our algorithm to circulate both *lengths* and *widths* at the same time, and then rather than force `reduce` to produce a single winner, it can produce the set of mutually minimal pairs `(length, width)` as output for each node. If we iterate this process to fixed point, we find a minimal set of lengths and widths for each node. This minimal set is called a [Pareto frontier](https://en.wikipedia.org/wiki/Pareto_efficiency) by mathematicians, and a [Skyline](https://en.wikipedia.org/wiki/Skyline_operator) by database scientists.
+
+```rust
+    inner
+        .join(&edges)
+        .map(|(_k,((l1,w1),(d,(l2,w2))))| (d, (l1 + l2, std::cmp::max(w1, w2))))
+        .concat(&nodes)
+        .reduce(|_, s, t| {
+            // push the first element for sure.
+            t.push((*s[index].0, 1));
+            for index in 1 .. s.len() {
+                // push any element that improves the width.
+                if (t[t.len()].0).1 > (s[index].0).1 {
+                    t.push((*s[index].0, 1));
+                }
+            }
+        })
+```
+
+If we go and run this, again on our random graphs with random weigths, we get an even-more excited degradation as we increase the variation of weights.
+
+|nodes|edges|minimum|maximum|compute| update|
+|----:|----:|------:|------:|------:|------:|
+|1M   |  10M|      1|      1|  7.75s|  8.02s|
+|1M   |  10M|      1|      2| 26.85s| 28.55s|
+|1M   |  10M|      1|      3| 71.94s| 76.36s|
+|1M   |  10M|      1|      4|128.72s|214.62s|
+|1M   |  10M|      1|      5|214.86s|240.58s|
+
+I only went out this far because it was starting to get slow.
+
+We can improve this, as we have before. It turns out that the right thing *seems* to be to advance updates by the paths lengths, as we did for single-source shortest paths. The results improve to:
+
+|nodes|edges|minimum|maximum|compute| update|
+|----:|----:|------:|------:|------:|------:|
+|1M   |  10M|      1|      1|  7.75s|  8.02s|
+|1M   |  10M|      1|      2| 19.60s| 20.63s|
+|1M   |  10M|      1|      3| 40.30s| 43.06s|
+|1M   |  10M|      1|      4| 76.17s|114.95s|
+|1M   |  10M|      1|      5|113.13s|124.38s|
+
+Now, we *could* also have advanced updates by 1024 times the width. That worked previously, right?
+
+It doesn't work here.
+
+|nodes|edges|minimum|maximum|compute| update|
+|----:|----:|------:|------:|------:|------:|
+|1M   |  10M|      1|      1|  7.75s|  8.02s|
+|1M   |  10M|      1|      2| 47.70s| 51.19s|
+|1M   |  10M|      1|      3|119.43s|128.32s|
+|1M   |  10M|      1|      4|215.36s|549.13s|
+|1M   |  10M|      1|      5|385.52s|432.71s|
+
+I don't have a good explanation for this. Probably it makes a lot of sense and has a sane explanation; perhaps the stratification by width forces apart many shortest path computations, but provides no structure or order for the execution of each. I'm sure it is a great mess for a real scientific reason, but I propose we don't study it further here.
 
 ### Conclusions
 
