--- a/posts/2019-05-20.md
+++ b/posts/2019-05-20.md
@@ -1,13 +1,12 @@
-
 ## Programming with time
 
 In this post we'll look at how to speed up (differential) dataflow computations by manipulating time. If you were looking around for a super-power to pick up, this might be the one.
 
 Dataflow computations describe several independent bits of computation, and how each of these bits of computation should react to the arrival of new data. Unlike imperative computations, dataflow computations typically do *NOT* express any thoughts about which work should happen first, second, or last. In some interesting cases, this ambivalence can lead to sketchy performance.
 
-Unlike vanilla dataflow systems, *timely* dataflow systems allow the programmatic manipulation of the timestamps associated with records. This allows programs to introduce sequential execution into their computation, a la carte.
+Unlike vanilla dataflow systems, *timely* dataflow systems allow the programmatic manipulation of the timestamps associated with records. This allows programs to introduce sequential execution into their computation, a la carte, and effect specific algorithms with improved running times.
 
-### An exhausting example
+### An short example
 
 Let's take the example of single-source shortest paths: we have as input a directed graph whose edges have weights (let's say strictly positive weight). For a query node, we want to produce all other nodes reachable along a directed path from the query node, and for each of these other nodes we must report the *least* path length: the sum of weights along the path.
 
@@ -15,7 +14,7 @@ For example, here is a picture of a directed graph with some edge weights on it:
 
 ![A directed graph](https://github.com/frankmcsherry/blog/blob/master/assets/ssswp/graph.png)
 
-Let's talk through how we might compute the shortest paths from a supplied single source.
+Let's talk through how we might compute the shortest paths from a supplied single source (marked "root" in the picture above).
 
 There is a classic algorithm that starts from the source node, A, at distance zero, and then repeatedly improves the set of shortest distances by considering single steps along edges. Once we reach a point where no further improvements can be made, we have reached the correct answer!
 
@@ -57,9 +56,9 @@ where G::Timestamp: Lattice+Ord {
 }
 ```
 
-That might be a bit of an eyeful to look at all at once, so take your time. We will return to parts of it as we go along. The most exciting part are the four lines at the end, where we describe the rule for updating `dists`.
+That might be a bit of an eyeful to look at all at once, so take your time. We will return to parts of it as we go along. The most exciting part is the four lines at the end, where we describe the rule for updating `dists`.
 
-Let's see how a computation like this runs!
+### Let's see it go!
 
 We are going to go pretty simple in this post: we'll use random graphs on specified numbers of nodes and edges, and with edge weights drawn uniformly between specified minimum and maximum values. Our computation will first load up and run `sssp` on the input graph, and then perform a sequence of 1,000 random updates to the graph (each an edge addition and deletion); we are interested in the times neede to perform both of these.
 
@@ -90,7 +89,7 @@ Things for sure got worse. Let's crank things up even further, by orders of magn
 |1M   |  10M|      1|    100| 82.21s| 87.58s|
 |1M   |  10M|      1|   1000|100.75s|106.96s|
 
-Our initial running time has increased by 13x, and the incremental update times have increased 20x from 300ms to six seconds (for 1,000 updates; still not tragic).
+Our initial running time has increased by 13x, and the incremental update times have increased 20x from 300ms to six seconds (for 1,000 updates; still not tragic). All we did was change the weights on the graph, we didn't make the graph any bigger or more weirdly shaped.
 
 Something has gone horribly wrong with SSSP as the variation in weights increases.
 
@@ -125,21 +124,21 @@ Among other things,
 
 * In the fifth round, we again propose new and improved distances to F, G, and H.
 
-What you might notice here, or perhaps not because the example is somewhat small, is that we are happily investigating fairly large cost paths, the early paths through B, and informing nodes downstream about their newly discovered distances, long before we have any reason to believe that these will be final distances.
+What you might notice here, or perhaps not because the example is somewhat small, is that we are happily investigating fairly large cost paths, the early paths through B, and informing nodes downstream about their newly discovered distances, long before we have any reason to believe that these will be final distances. We are churning a lot of distance proposals to F, G, and H.
 
-The example is actually chosen so that the shortest distance from A to H is continually changing, from 13, to 12, to 11, and eventually to 9. It takes seven rounds to get there.
-
-Consider what will happen in a graph that has edges with weights either one or one thousand. Starting from our source, we should probably follow just weight one edges for quite a while, probably one thousand-ish steps. At that point, we can afford to follow one weight one thousand edge, and should then return to stepping along weight one edges again.
+Consider what will happen in a graph that has edges with weights either one or one thousand. Starting from our source, we should probably follow just weight one edges for quite a while, probably one thousand-ish steps. At that point, we can afford to follow a single weight one thousand edge, and should then return to stepping along weight one edges again.
 
 It is not even remotely helpful to step repeatedly along all of those weight one thousand edges; in fact, it is actively harmful if we propagate that information and must then eventually retract all of it (when distances to nodes eventually improve).
 
 We could plausibly have been better off simply *waiting* to traverse high-weight edges.
 
-### Waiting
+### Waiting for weights
 
 There is a slight change we can make to the body of our loop that will delay updates to later rounds of iteration. Unfortunately, we need to drop down to *timely* dataflow, where we can directly manipulate differential dataflow's `(data, time, diff)` triples. We will just pop those open, and advance the round of iteration in `time` to be the distance reported in `data`.
 
-Crazy, right? Probably...
+We are just rewriting *when* an update should happen, pushing it forwards in time to the iteration that corresponds to the length of the path.
+
+Crazy, right? Probably... Here are the changes:
 
 ```rust
     dists.join(&edges)
@@ -165,7 +164,7 @@ In fact, this works great. The experimental numbers above that went up to 27 sec
 |1M   |  10M|      1|      4| 10.72s|11.19s|
 |1M   |  10M|      1|      5| 11.48s|11.96s|
 
-Amazing!
+Amazing! The times still get worse, but also the paths that we are producing are longer and stragglier than with unit weights so it all makes some sense.
 
 And where we went up to one hundred seconds to compute and six seconds to update, we now see only:
 
@@ -176,11 +175,11 @@ And where we went up to one hundred seconds to compute and six seconds to update
 |1M   |  10M|      1|    100| 34.22s| 36.17s|
 |1M   |  10M|      1|   1000|127.02s|132.97s|
 
-Eh. That was *almost* amazing. What new misery has befallen us?
+Eh. Oops. That was *almost* amazing. What new misery has befallen us?
 
 ### Waiting faster
 
-Perhaps you recall learning about Dijkstra's algorithm, a sweet single-source shortest path algorithm; it is a great example of when you would learn about a [priority queue](https://en.wikipedia.org/wiki/Priority_queue), a neat data structure that lets you quickly update and extract the minimal element from a set. Dijkstra's algorithm uses a priority queue to manage the set of unvisited nodes at the least distance, and to process them in that order.
+Perhaps you recall learning about [Dijkstra's algorithm](https://en.wikipedia.org/wiki/Dijkstra's_algorithm), a sweet single-source shortest path algorithm; it is a great example of when you would learn about a [priority queue](https://en.wikipedia.org/wiki/Priority_queue), a neat data structure that lets you quickly update and extract the minimal element from a set. Dijkstra's algorithm uses a priority queue to manage the set of unvisited nodes, and to process them in order of the least distance to each.
 
 We have desperate need of such a data structure here.
 
@@ -212,17 +211,17 @@ The result is a touch slower on the single-weight case, but it starts to dramati
 |1M   |  10M|      1|    100| 25.81s| 27.82s|
 |1M   |  10M|      1|   1000| 36.93s| 41.14s|
 
-This is now much less embarassing than it was before. It isn't wonderful yet (don't ask about the COST here), but it is a significant improvement over where we started.
+This is now much less embarassing than it was before. It isn't wonderful yet (don't ask about the COST here), but it is a significant improvement over where we started. There is an outstanding problem of "what is a priority queue for partially ordered timestamps?" to which there are relatively few thoughts I am aware of.
 
 ### Single-source *widest* paths
 
 Let's look at another example, similar to single-source shortest paths but with a twist.
 
-Imagine we are trying to drive a large truck through an old-timey European city, whose roads have non-uniform widths. In order to reach some address in the city, we will need to look for roads all of which are sufficiently wide to accommodate our truck. We'd like short paths, sure, but even more important is to find *wide* paths.
+Imagine we are trying to drive a large truck through an old-timey city, whose roads have non-uniform widths. In order to reach some address in the city, we will need to look for roads all of which are sufficiently wide to accommodate our truck. We'd like short paths, sure, but even more important is to find *wide* paths (for both short and wide paths, wait until the next section).
 
 The single-source widest path problem looks for paths from a source node to all other nodes, with the largest *minimum* weight along the path. For each other node, the output of the computation tells us just how wide a truck we can drive to that destination.
 
-Algorithmically this is pretty similar to the shortest path problem, but with a few changes. For pedagogical reasons we are going to flip weights over, so that we track the largest value along the path, and for each node retaining the minimum value among all paths. Just think of the value as decribing the amount of dirt used in the surrounding walls, I guess.
+Algorithmically this is pretty similar to the shortest path problem, but with a few changes. For pedagogical reasons we are going to flip weights over, so that we track the largest value along the path, and for each node retain the minimum value among all paths. Just think of the value as decribing the amount of dirt used in the surrounding walls, I suppose.
 
 ```rust
     roots
@@ -242,7 +241,7 @@ Algorithmically this is pretty similar to the shortest path problem, but with a 
 
 With so many similarities, why are we looking at this problem? It turns out that SSWP has an interesting change from SSSP: whereas paths in SSSP naturally expire because they get longer with each hop, SSWP paths can go on for quite a while without reducing their value.
 
-Consider a random graph with edge widths one and two. With a large average degree we can probably reach most of the nodes in the graph along a path of width two, totally ignoring paths that cross an edge of width one. At the same time, the set of nodes that can be reached along a path of width one grows exponentially faster than the set of nodes that cane be reached along a path of width two.
+Consider a random graph with edge widths one and two. With a large average degree we can probably reach most of the nodes in the graph along a path of width one, totally ignoring paths that cross an edge of width two. At the same time, the set of nodes that can be reached along a path of width two grows exponentially faster than the set of nodes that can be reached along a path of width one. (remember: for us, for now, one is better than two).
 
 |nodes|edges|minimum|maximum|compute| update|
 |----:|----:|------:|------:|------:|------:|
@@ -255,13 +254,13 @@ Consider a random graph with edge widths one and two. With a large average degre
 |1M   |  10M|      1|    100|100.42s|107.38s|
 |1M   |  10M|      1|   1000|161.51s|178.84s|
 
-This is a fair bit worse than SSSP (though not way out of line). Can we fix it the same way?
+This is a fair bit worse than SSSP! Seventeen seconds for incremental updates! Can we fix it the same way?
 
-We can't. At least, not really. The problem is that there isn't as much of a correspondence between rounds of iteration and "width" as there was for "distance". We might take several rounds of iteration with the same width, and just delaying a shorter width one or two iterations doesn't do what we want.
+We can't. At least, not the same way. The problem is that there isn't as much of a correspondence between rounds of iteration and "width" as there was for "distance". We might take several rounds of iteration with the same width, and just delaying a less appealing width by one or two iterations doesn't do what we want.
 
-What do we want? We want to punt each smaller width arbitrarily far into the future, so that we only process it once we've finished with all better widths. We can do this with fancy timely data lexicographic timestamp combinators or .. or we can just cheat a bit.
+What do we want? We want to punt each less appealing width arbitrarily far into the future, so that we only process it once we've finished with all better widths. We can do this with fancy timely data lexicographic timestamp combinators or .. or we can just cheat a bit.
 
-The following fragment advances each update 1024 rounds into the future based on its width. This gives each distinct width 1024 rounds to get their shit together and see which nodes can be newly reached.
+The following fragment advances each update 1024 rounds into the future based on its width. This gives each distinct width 1024 rounds to get its shit together and see which nodes can be newly reached. After 1024 rounds we start looking at the next width, ready or not.
 
 ```rust
     inner
@@ -271,7 +270,7 @@ The following fragment advances each update 1024 rounds into the future based on
         // BEGIN NEW
         .inner
         .map_in_place(|((d,w),mut t,r)|
-           t.inner = ::std::cmp::max(t.inner, 1024 * *w as u64);
+           t.inner = std::cmp::max(t.inner, 1024 * *w as u64);
         )
         .delay(|(_,t,_),_| t.clone())
         .as_collection()
@@ -307,6 +306,8 @@ Instead, with `delay` in place the numbers look like
 |1M   |  10M|      1|    100| 26.93s| 28.25s|
 |1M   |  10M|      1|   1000| 39.41s| 41.99s|
 
+Much better than 160 seconds to compute, and 17 seconds to incrementally update, right?
+
 ### Pareto surfaces
 
 Let's get a bit more exotic, shall we?
@@ -315,7 +316,9 @@ We've done shortest paths, and we've done widest paths. Most likely there is a t
 
 In our example, paths have a length and a width, and one path is clearly better than another if it has shorter values for each (recall: we are doing the short-width is best interpretation). But we could have two paths for which neither is better than the other. Or more generally, a set of paths no one of which is better than another. What to do in this case?
 
-We can tweak our algorithm to circulate both *lengths* and *widths* at the same time, and then rather than force `reduce` to produce a single winner, it can produce the set of mutually minimal pairs `(length, width)` as output for each node. If we iterate this process to fixed point, we find a minimal set of lengths and widths for each node. This minimal set is called a [Pareto frontier](https://en.wikipedia.org/wiki/Pareto_efficiency) by mathematicians, and a [Skyline](https://en.wikipedia.org/wiki/Skyline_operator) by database scientists.
+We can tweak our algorithm to circulate both lengths and widths at the same time, as a pair, and then rather than force `reduce` to produce a single winner, it can produce the set of mutually minimal pairs `(length, width)` as output for each node. If we iterate this process to fixed point, we find a minimal set of lengths and widths for each node. This minimal set is called a [Pareto frontier](https://en.wikipedia.org/wiki/Pareto_efficiency) by mathematicians, and a [Skyline](https://en.wikipedia.org/wiki/Skyline_operator) by database scientists.
+
+The code to do this just asks `reduce` to produce the minimal elements, exploining the sortedness of the input to `reduce`: we pick off the first element, with the shortest length, and then in sequence any element that improves the width.
 
 ```rust
     inner
@@ -346,7 +349,11 @@ If we go and run this, again on our random graphs with random weigths, we get an
 
 I only went out this far because it was starting to get slow.
 
-We can improve this, as we have before. It turns out that the right thing *seems* to be to advance updates by the paths lengths, as we did for single-source shortest paths. The results improve to:
+In fairness, we are computing something more complicated, for which the solution itself is now larger (with five widths, we imagine each node will have up to five path summaries to present).
+
+We can improve on these times, as we have before.
+
+It turns out that the right thing *seems* to be to advance updates through time by their lengths, as we did for single-source shortest paths. The results improve to:
 
 |nodes|edges|minimum|maximum|compute| update|
 |----:|----:|------:|------:|------:|------:|
@@ -358,7 +365,7 @@ We can improve this, as we have before. It turns out that the right thing *seems
 
 Now, we *could* also have advanced updates by 1024 times the width. That worked previously, right?
 
-It doesn't work here.
+It doesn't work here. Not at all.
 
 |nodes|edges|minimum|maximum|compute| update|
 |----:|----:|------:|------:|------:|------:|
